# Dome

./: .gitignore  README.md
dome-rs/: .gitignore  BUILD.md  Cargo.toml  Makefile  USAGE_EXAMPLES.rs  build.ps1  install.sh
dome-rs/src/: main.rs
dome-rs/src/cli/: commands.rs  completer.rs  mod.rs
dome-rs/src/crypto/: cipher.rs  kdf.rs  mod.rs
dome-rs/src/editor/: mod.rs  tui.rs
dome-rs/src/utils/: format.rs  mod.rs  update.rs  version.rs
dome-rs/src/vault/: manager.rs  mod.rs  storage.rs
